--- a/app/views/shared/fbShare.scala.html
+++ b/app/views/shared/fbShare.scala.html
@@ -1,4 +1,4 @@
 @(url: String)
-<div class="btn-group btn-group-likes">
-    <div class="fb-like" data-href="@url" data-layout="button_count" data-action="recommend" data-show-faces="false" data-share="true"></div>
+<div class="btn-group-likes">
+    <div class="fb-like" data-href="@url" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
 </div>
