--- a/app/views/startpage/startpageBox.scala.html
+++ b/app/views/startpage/startpageBox.scala.html
@@ -6,7 +6,7 @@
         <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0">
             <a href="@box.linkToProfile">
                 @defining( if(box.mainImage.isDefined){ "style=\"background-image: url('" + box.mainImage.get + "')\"" } else { "" } ) { mainImage =>
-                <div class="thumbnail panel-startpage" @Html(mainImage)>
+                <div class="thumbnail panel-startpage hover-green-dropshadow" @Html(mainImage)>
                     <div class="body">
                         @if(box.userImage.isDefined){
                             @shared.hostImageCircle(box.userImage.get)
@@ -15,9 +15,13 @@
                         }
                         <h2>@box.fullName</h2>
                         <hr>
-                        <p class="location">@box.location<br></p>
+                        @if(box.location.nonEmpty) {
+                            <p class="location">@Html(Messages("startpage.boxes.location", box.location.get))</p>
+                        }else {
+                        <p><br></p>
+                        }
                         @shared.grade(inputId = "host-grade", initialValue = box.userRating, disabled = true, size = "xxs")
-                        <div class="host-level-icon level-guest01" data-toggle="tooltip" data-placement="right" title="@Messages("level.guest.description")"><span>@Messages("level.guest.header")</span></div>
+                        @*<div class="host-level-icon level-guest01" data-toggle="tooltip" data-placement="right" title="@Messages("level.guest.description")"><span>@Messages("level.guest.header")</span></div>*@
                     </div>
                 </div>
                 }
