--- a/app/views/profile/skapa.scala.html
+++ b/app/views/profile/skapa.scala.html
@@ -171,7 +171,18 @@
                 </div>
 
                 <div class="col-xs-12">
-                    <input class="btn btn-primary pull-right" type="submit" value="@Messages("profile.create.save")">
+                    <p id="acceptBox" class="pull-right">
+
+                        @helper.checkbox(EnvDataForm("acceptTerms"),
+                            'id -> "acceptTerms",
+                            '_label -> "Godkänner vilkoren",
+                            '_showErrors -> true,
+                            '_help -> "Du måste acceptera villkoren för att bli medlem"
+                        )
+                        Jag godkänner villkoren
+                        <br>
+                        <input class="btn btn-primary pull-right" type="submit" value="@Messages("profile.create.save")">
+                    </p>
                 </div>
                 }
             </div>
