- Like buttons now works on Users - Like buttons now works on Recipes - Like button now orange when "liked".
- Design fixes for "Accept Terms"
- Modal dialog for "Accept Terms"
- Terms can now be created in Admin-mode using the Content-category "TERMS".

- Currently known bug: A content page cannot be in two categories at the same time

--- a/app/assets/stylesheets/genericons.less
+++ b/app/assets/stylesheets/genericons.less
@@ -29,7 +29,7 @@
 	text-align: center;
 	-moz-transition: color .1s ease-in 0;
 	-webkit-transition: color .1s ease-in 0;
-	display: inline-block;
+	display: inline-block !important;
 	font-family: "Genericons";
 	font-style: normal;
 	font-weight: normal;
